# sendbox-api

./: .gitignore  docker-compose.yml  fabfile.py  main.py  pyproject.toml  pytest.ini
app/: main.py  models.py  settings.py
tests/: conftest.py  test_messages.py
